--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-calendars": "^1.141.0",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-popup-dialog": "^0.18.2",
     "react-native-sqlite-storage": "^3.3.10",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.11.0"
